# nlopt_example

./: CMakeLists.txt  README.md  sqp_example.cpp
include/: nmpc_controller.h  utils.h  vehicle_model.h
include/nmpc/: nmpc_controller.h  nmpc_utils.h  obstacle.h  reference_trajectory_generator.h  vehicle_model.h
src/: main.cpp  nmpc_controller.cpp  vector_example.cpp  vehicle_model.cpp
src/nmpc/: nmpc_controller.cpp  nmpc_main.cpp  nmpc_utils.cpp  obstacle.cpp  reference_trajectory_generator.cpp  vehicle_model.cpp
